# nidaros

./: CMakeLists.txt  README.md  nidaros.conf
src/: bot.cpp  bot.h  common.cpp  common.h  config.cpp  config.h  main.cpp
